	* configs/Kconfig, README.txt, viewtool-stm32f107/highpri, Kconfig,
	  README.txt, and src/stm32_highpri.c:  This is the initial framework
	  for a test of the high priority, nested interrupt logic.  Still
	  incomplete and does not yet run (2013-12-22).
	* arch/arm/src/armv7-m/ram_vectors.h and up_ramvec_initialize.c: 
	  Correct alignment of the RAM vector table (2013-12-22).
	* Kconfig: Support configuration of interrupt controller debug output
	  (2013-12-22).
	* configs/viewtool-stm32f107/scripts:  Need to do some special things
	  in linking of the common vectors are used (2013-12-22).
	* arch/arm/include/*/irq*.h:  Add definition NR_VECTORS so that the RAM
	  vector logic can know how many vectors there are.  NR_IRQS is often
	  not equal to NR_VECTORS (2013-12-23).
	* arch/arm/src/*_vectors.S:  Standardize the name of the vector table
	  and the name of the common vector handling logic so that the MCU-
	  independent logic and work with these (2013-12-23).
	* configs/viewtool-stm32f107/scripts: Move the RAM vector tables to the
	  beginning of SRAM.  It seems to require this alignament.  Also, we
	  don't need different scripts for the CMNVECTOR case now that the vector
	  table has a common name.
	* arch/arm/src: armv-7/up_exception.S and xxx/xxx_vectors.S where
	  xxx={kinetis, lm, lpc17xx, sam34, and stm32}:  Modified register usage
	  when saving the context on the stack:  In order to handler nested
	  interrupts, the stack pointer must be used so that when it is
	  decremented, the contents on the stack are protected from the nested
	  interrupt handling (2013-12-23).
	* arch/Kconfig: The CONFIG_ARCH_INT_DISABLEALL feature is disabled (i.e.,
	  depends on EXPERIMENTAL).  That is because the current implementation
	  will not work because interrupts get disabled in the interrupt handler
	  too, defeating the nesting of interrupts.  The fix is easy: It just
	  needs more levels of priority of disabling interrupts vs interrupt
	  handling (2013-12-23).